--- a/source/index.html
+++ b/source/index.html
@@ -4,9 +4,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="css/style.min.css">
+  <link rel="stylesheet" href="js/script.js">
   <title>Crappo</title>
 </head>
-<body>
+<body class="index-page">
   <header class="header">
     <img src="img/logotypes/logo-crappo.svg" alt="Crappo">
     <nav class="nav">
@@ -32,7 +34,7 @@
   </header>
   <main>
     <section class="promo">
-      
+
     </section>
   </main>
   <footer class="footer">
