--- a/source/index.html
+++ b/source/index.html
@@ -5,8 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="css/style.min.css">
-  <link rel="stylesheet" href="js/jquery-3.6.0.min.js">
-  <link rel="stylesheet" href="js/script.js">
+  <script language="JavaScript" type="text/javascript" src="js/jquery-3.6.0.min.js"></script>
+  <script language="JavaScript" type="text/javascript" src="js/script.js"></script>
   <title>Crappo</title>
 </head>
 <body class="index-page">
@@ -36,6 +36,9 @@
             <a href="#" class="login__up">Register</a>
           </div>
         </div>
+        <button class="header__burger">
+          <span></span>
+        </button>
       </div>
     </header>
 
@@ -68,7 +71,7 @@
       </div>
     </div>
     <section class="why container">
-      <img src="img/mining.svg" alt="Mining">
+      <img src="img/mining.svg" alt="Mining" class="why__img">
       <div class="why__text-block">
         <h2 class="why__title">Why you should choose CRAPPO</h2>
         <p class="why__text">Experience the next generation cryptocurrency platform. No financial borders, extra fees, and fake reviews.</p>
