--- a/source/index.html
+++ b/source/index.html
@@ -217,19 +217,19 @@
           <p class="footer__copyright">©2021 CRAPPO. All rights reserved</p>
           <div class="footer__social-icons">
 
-            <a href="" class="social-icons__link">
+            <a href="#" class="social-icons__link">
               <img src="img/icons/icon-facebook.svg" alt="Facebook" class="social-icons__img">
             </a>
-            <a href="" class="social-icons__link">
+            <a href="#" class="social-icons__link">
               <img src="img/icons/icon-instagram.svg" alt="Instagram" class="social-icons__img">
             </a>
-            <a href="" class="social-icons__link">
+            <a href="#" class="social-icons__link">
               <img src="img/icons/icon-youtube.svg" alt="Youtube" class="social-icons__img">
             </a>
-            <a href="" class="social-icons__link">
+            <a href="#" class="social-icons__link">
               <img src="img/icons/icon-twitter.svg" alt="Twitter" class="social-icons__img">
             </a>
-            <a href="" class="social-icons__link">
+            <a href="#" class="social-icons__link">
               <img src="img/icons/icon-linkedin.svg" alt="Linkedin" class="social-icons__img">
             </a>
           </div>
